--- a/index.html
+++ b/index.html
@@ -96,19 +96,19 @@
         <div class="content">
             <div class="item-photo">
 
-                <div class="content-photo" >
-                    <img class="slides" src="img/box.png" >
-                    <img class="slides" src="img/1.png" >
-                    <img class="slides" src="img/2.png" >
+                <div class="content-photo">
+                    <img class="slides" src="img/box.png">
+                    <img class="slides" src="img/1.png">
+                    <img class="slides" src="img/2.png">
                     <img class="slides" src="img/3.png">
                     <img class="slides" src="img/4.png">
                     <img class="slides" src="img/5.png">
-                    <img class="slides" src="img/6.png" >
-                    <img class="slides" src="img/7.png" >
+                    <img class="slides" src="img/6.png">
+                    <img class="slides" src="img/7.png">
                     <img class="slides" src="img/8.png">
-                    <img class="slides" src="img/9.png" >
-                    <img class="slides" src="img/10.png" >
-                    <img class="slides" src="img/11.png" >
+                    <img class="slides" src="img/9.png">
+                    <img class="slides" src="img/10.png">
+                    <img class="slides" src="img/11.png">
                     <img class="slides" src="img/12.png">
                 </div>
 
@@ -117,19 +117,45 @@
                         <button class="button light-grey" onclick="plusDivs(-1)">❮ Prev</button>
                         <button class="button light-grey" onclick="plusDivs(1)">Next ❯</button>
                     </div>
-                    <button class="button demo" onclick="currentDiv(1)"><img src="img/box-two.png" alt=""></button>
-                    <button class="button demo" onclick="currentDiv(2)"><img src="img/1.png" alt=""></button>
-                    <button class="button demo" onclick="currentDiv(3)"><img src="img/2.png" alt=""></button>
-                    <button class="button demo" onclick="currentDiv(4)"><img src="img/3.png" alt=""></button>
-                    <button class="button demo" onclick="currentDiv(5)"><img src="img/4.png" alt=""></button>
-                    <button class="button demo" onclick="currentDiv(6)"><img src="img/5.png" alt=""></button>
-                    <button class="button demo" onclick="currentDiv(7)"><img src="img/6.png" alt=""></button>
-                    <button class="button demo" onclick="currentDiv(8)"><img src="img/7.png" alt=""></button>
-                    <button class="button demo" onclick="currentDiv(9)"><img src="img/8.png" alt=""></button>
-                    <button class="button demo" onclick="currentDiv(10)"><img src="img/9.png" alt=""></button>
-                    <button class="button demo" onclick="currentDiv(11)"><img src="img/10.png" alt=""></button>
-                    <button class="button demo" onclick="currentDiv(12)"><img src="img/11.png" alt=""></button>
-                    <button class="button demo" onclick="currentDiv(13)"><img src="img/12.png" alt=""></button>
+                    <button class="button demo" onclick="currentDiv(1)">
+                        <img src="img/box-two.png" alt="">
+                    </button>
+                    <button class="button demo" onclick="currentDiv(2)">
+                        <img src="img/1.png" alt="">
+                    </button>
+                    <button class="button demo" onclick="currentDiv(3)">
+                        <img src="img/2.png" alt="">
+                    </button>
+                    <button class="button demo" onclick="currentDiv(4)">
+                        <img src="img/3.png" alt="">
+                    </button>
+                    <button class="button demo" onclick="currentDiv(5)">
+                        <img src="img/4.png" alt="">
+                    </button>
+                    <button class="button demo" onclick="currentDiv(6)">
+                        <img src="img/5.png" alt="">
+                    </button>
+                    <button class="button demo" onclick="currentDiv(7)">
+                        <img src="img/6.png" alt="">
+                    </button>
+                    <button class="button demo" onclick="currentDiv(8)">
+                        <img src="img/7.png" alt="">
+                    </button>
+                    <button class="button demo" onclick="currentDiv(9)">
+                        <img src="img/8.png" alt="">
+                    </button>
+                    <button class="button demo" onclick="currentDiv(10)">
+                        <img src="img/9.png" alt="">
+                    </button>
+                    <button class="button demo" onclick="currentDiv(11)">
+                        <img src="img/10.png" alt="">
+                    </button>
+                    <button class="button demo" onclick="currentDiv(12)">
+                        <img src="img/11.png" alt="">
+                    </button>
+                    <button class="button demo" onclick="currentDiv(13)">
+                        <img src="img/12.png" alt="">
+                    </button>
                 </div>
             </div>
             <div class="item-info">
@@ -138,15 +164,31 @@
                 <span>$47.88</span>
                 <p>Free shipping</p>
                 <div class="price">
-                        <label>Quantity: <input type="text" value="1"></label>
-                        <button class="add">ADD TO CART</button>
+                    <label>Quantity:
+                        <input type="text" value="1">
+                    </label>
+                    <button class="add">ADD TO CART</button>
                 </div>
                 <p>Because: Nuts Free, BPA Free, Vitamins</p>
                 <p>Chocolate (Sugar, Hydrogenated Vegetable Oil, Cocoa Powder, Whey Powder,Imported milk Powder,</br>
-                     Cocoa Syrup, Edible Essence(Chocolate Flavor and Milk Flavor), Granules ten. Biscuit (Wheat meal, Sugar,<br>
-                      Corn Starch, Cocoa Butter Substitute, Rice, Cocoa Powder, Whey Powder, Milk Powder, Edible Essence(<br>
-                      Chocolate Flavor and Milk Flavor), Salt). Allergen Statement: Contains Milk, Wheat. Manufactured on equip-<br>
-                      ment that also processes products containing Soy.</p>
+                    Cocoa Syrup, Edible Essence(Chocolate Flavor and Milk Flavor), Granules ten. Biscuit (Wheat meal, Sugar,
+                    <br> Corn Starch, Cocoa Butter Substitute, Rice, Cocoa Powder, Whey Powder, Milk Powder, Edible Essence(
+                    <br> Chocolate Flavor and Milk Flavor), Salt). Allergen Statement: Contains Milk, Wheat. Manufactured on
+                    equip-
+                    <br> ment that also processes products containing Soy.</p>
+            </div>
+            <div class="photos">
+                <div class="text-photos">
+                    <p>KING BOX</p>
+                    <p>Share your photos and join the #lKING EGGS family </p>
+                </div>
+                <button class="add-photo">
+                    ADD YOUR PHOTO
+                </button>
+                <div class="slider-photo">
+                    
+                </div>
+
             </div>
         </div>
     </div>
