--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     Закрити
                 </div>
                 <div class="btn_mobile_open">
-                    <img src="/img/group%206.svg" alt="">
+                    <img src="./img/group%206.svg" alt="">
                     Меню
                 </div>
             </div>
@@ -273,7 +273,7 @@
         </div>
         <div class="container_idea_items">
             <div class="container_idea_icon">
-                <img src="/img/politician_1%201.svg" alt="">
+                <img src="./img/politician_1%201.svg" alt="">
             </div>
             <div class="container_idea_text">Як стати депутатом</div>
         </div>
@@ -296,12 +296,14 @@
         </div>
         <div class="container_news_bottom">
             <div class="container_news_b_left">
-                <div class="container_news_img">
-                    <img src="./img/Rectangle%2026.png" alt="">
-                    <div class="label_all">
-                        Головні новини
+                <a href="#">
+                    <div class="container_news_img">
+                        <img src="./img/Rectangle%2026.png" alt="">
+                        <div class="label_all">
+                            Головні новини
+                        </div>
                     </div>
-                </div>
+                </a>
                 <div class="container_news_content">
                     <div class="container_news_content_t_b">
                         Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
@@ -391,7 +393,7 @@
         <div class="smart_content">
             <div class="smart_content_l">
                 <div class="smart_content_l_img">
-                    <img src="imghone%201.svg" alt="">
+                    <img src="./img/phone%201.svg" alt="">
                 </div>
                 <div class="smart_content_l_text">
                     Керуй містом зі свого
@@ -473,7 +475,7 @@
                 <img src="./img/Rectangle%2027.png" alt="">
             </div>
             <div class="container_lead_items">
-                <img src="/img/image%206.png" alt="">
+                <img src="./img/image%206.png" alt="">
             </div>
             <div class="container_lead_items">
                 <img src="./img/Rectangle%2028.png" alt="">
@@ -493,7 +495,7 @@
                 <img src="./img/Rectangle%2029.png" alt="">
             </div>
             <div class="container_lead_items">
-                <img src="/img/image%207.png" alt="">
+                <img src="./img/image%207.png" alt="">
             </div>
         </div>
     </section>
@@ -631,7 +633,7 @@
         <div class="footer_bottom_items">
             <a href="#" class="version_glasses d_flex">
                 <div class="icon">
-                    <img src="imgye%201.svg" alt="">
+                    <img src="./img/eye%201.svg" alt="">
                 </div>
                 Версія для слабозорих
             </a>
@@ -665,7 +667,7 @@
         <div class="footer_bottom_items footer_bottom_l_page">
             <a href="#" class="footer_links_page">
                 <div class="footer_icon">
-                    <img src="/img/join.svg" alt="">
+                    <img src="./img/join.svg" alt="">
                 </div>
                 <div class="footer_links_text">
                     Приєднуйся до партії
@@ -681,7 +683,7 @@
             </a>
             <a href="#" class="footer_links_page">
                 <div class="footer_icon">
-                    <img src="/img/politician%201.svg" alt="">
+                    <img src="./img/politician%201.svg" alt="">
                 </div>
                 <div class="footer_links_text">
                     Як стати депутатом
