--- a/news.html
+++ b/news.html
@@ -28,7 +28,7 @@
                     Закрити
                 </div>
                 <div class="btn_mobile_open">
-                    <img src="./img/group%206.svg" alt="">
+                    <img src="./img/Group%206.svg" alt="">
                     Меню
                 </div>
             </div>
